// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Props Matches snapshot with custom props 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel="React Simple Dropdown"
  ariaLabelledBy={null}
  centerText={false}
  className="custom-class"
  contentClassName={null}
  disabled={true}
  height={null}
  hideArrow={false}
  id="dropdown"
  maxContentHeight={150}
  onChange={[Function]}
  openUp={false}
  options={
    Array [
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "1",
      },
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "2",
      },
      Object {
        "ariaLabel": "ariaLabel",
        "className": "className",
        "iconClass": "fab fa-js-square",
        "title": "title",
        "value": "3",
      },
    ]
  }
  pageKeyTraverseSize={10}
  placeholder="Custom Placeholder..."
  searchable={false}
  selectedValueClassName={null}
  style={Object {}}
  width={400}
>
  <div
    aria-describedby={null}
    aria-hidden={true}
    aria-label="React Simple Dropdown"
    aria-labelledby={null}
    className="dropdown custom-class css-w4jram"
    id="dropdown"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="dropdown-selector css-q0xgr4"
    >
      <span
        className="dropdown-selector-search css-1l6e6we"
      >
        <input
          autoComplete="off"
          disabled={true}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          value=""
        />
      </span>
      <span
        className="dropdown-selector-placeholder css-nctil"
      >
        Custom Placeholder...
      </span>
      <Arrow
        dropdownOpen={false}
        getStyle={[Function]}
        hideArrow={false}
        searchable={false}
      >
        <div
          className="css-1h2654e"
        >
          <ChevronDown>
            <svg
              className="feather feather-chevron-down"
              fill="none"
              height="16"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ChevronDown>
        </div>
      </Arrow>
    </div>
    <ul
      className="dropdown-selector-content css-e99cqv"
    >
      <OptionItem
        key="1"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "1",
          }
        }
        optionClass="className css-qte9rq"
      >
        <div
          aria-label="ariaLabel"
          className="dropdown-option className css-qte9rq"
          onClick={[Function]}
          tabIndex={-1}
          title="title"
        >
          <i
            className="fab fa-js-square dropdown-option-icon"
          />
          1
        </div>
      </OptionItem>
      <OptionItem
        key="2"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "2",
          }
        }
        optionClass="className css-qte9rq"
      >
        <div
          aria-label="ariaLabel"
          className="dropdown-option className css-qte9rq"
          onClick={[Function]}
          tabIndex={-1}
          title="title"
        >
          <i
            className="fab fa-js-square dropdown-option-icon"
          />
          2
        </div>
      </OptionItem>
      <OptionItem
        key="3"
        onOptionClicked={[Function]}
        option={
          Object {
            "ariaLabel": "ariaLabel",
            "className": "className",
            "iconClass": "fab fa-js-square",
            "title": "title",
            "value": "3",
          }
        }
        optionClass="className css-qte9rq"
      >
        <div
          aria-label="ariaLabel"
          className="dropdown-option className css-qte9rq"
          onClick={[Function]}
          tabIndex={-1}
          title="title"
        >
          <i
            className="fab fa-js-square dropdown-option-icon"
          />
          3
        </div>
      </OptionItem>
    </ul>
  </div>
</Dropdown>
`;

exports[`Check Props Matches snapshot with default props 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel={null}
  ariaLabelledBy={null}
  centerText={false}
  contentClassName={null}
  disabled={false}
  height={null}
  hideArrow={false}
  id={null}
  maxContentHeight={150}
  onChange={[Function]}
  openUp={false}
  options={Array []}
  pageKeyTraverseSize={10}
  placeholder="Select ..."
  searchable={false}
  selectedValueClassName={null}
  style={Object {}}
  width={null}
>
  <div
    aria-describedby={null}
    aria-hidden={false}
    aria-label={null}
    aria-labelledby={null}
    className="dropdown css-4a6799"
    id={null}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="dropdown-selector css-q0xgr4"
    >
      <span
        className="dropdown-selector-search css-1l6e6we"
      >
        <input
          autoComplete="off"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          value=""
        />
      </span>
      <span
        className="dropdown-selector-placeholder css-nctil"
      >
        Select ...
      </span>
      <Arrow
        dropdownOpen={false}
        getStyle={[Function]}
        hideArrow={false}
        searchable={false}
      >
        <div
          className="css-1h2654e"
        >
          <ChevronDown>
            <svg
              className="feather feather-chevron-down"
              fill="none"
              height="16"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ChevronDown>
        </div>
      </Arrow>
    </div>
    <ul
      className="dropdown-selector-content css-e99cqv"
    >
      <div
        className="dropdown-selector-content--empty"
      >
        <Inbox>
          <svg
            className="feather feather-chevron-down"
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="22 12 16 12 14 15 10 15 8 12 2 12"
            />
            <path
              d="M5.45 5.11L2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
            />
          </svg>
        </Inbox>
        No data
      </div>
    </ul>
  </div>
</Dropdown>
`;

exports[`Check Props Matches snapshot with grouped options 1`] = `
<Dropdown
  ariaDescribedBy={null}
  ariaLabel={null}
  ariaLabelledBy={null}
  centerText={false}
  contentClassName={null}
  disabled={false}
  height={null}
  hideArrow={false}
  id={null}
  maxContentHeight={150}
  onChange={[Function]}
  openUp={false}
  options={
    Array [
      Object {
        "groupOptions": Array [
          Object {
            "value": "1",
          },
          Object {
            "value": "2",
          },
          Object {
            "value": "3",
          },
          Object {
            "value": "4",
          },
          Object {
            "value": "5",
          },
          Object {
            "value": "6",
          },
          Object {
            "value": "7",
          },
          Object {
            "value": "8",
          },
          Object {
            "value": "9",
          },
          Object {
            "value": "10",
          },
        ],
        "label": "numbers",
      },
      Object {
        "groupOptions": Array [
          Object {
            "value": "a",
          },
          Object {
            "value": "b",
          },
          Object {
            "value": "c",
          },
          Object {
            "value": "d",
          },
          Object {
            "value": "e",
          },
          Object {
            "value": "f",
          },
          Object {
            "value": "g",
          },
          Object {
            "value": "h",
          },
          Object {
            "value": "i",
          },
          Object {
            "value": "j",
          },
        ],
        "label": "letters",
      },
    ]
  }
  pageKeyTraverseSize={10}
  placeholder="Select ..."
  searchable={false}
  selectedValueClassName={null}
  style={Object {}}
  width={null}
>
  <div
    aria-describedby={null}
    aria-hidden={false}
    aria-label={null}
    aria-labelledby={null}
    className="dropdown css-4a6799"
    id={null}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="dropdown-selector css-q0xgr4"
    >
      <span
        className="dropdown-selector-search css-1l6e6we"
      >
        <input
          autoComplete="off"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          value=""
        />
      </span>
      <span
        className="dropdown-selector-placeholder css-nctil"
      >
        Select ...
      </span>
      <Arrow
        dropdownOpen={false}
        getStyle={[Function]}
        hideArrow={false}
        searchable={false}
      >
        <div
          className="css-1h2654e"
        >
          <ChevronDown>
            <svg
              className="feather feather-chevron-down"
              fill="none"
              height="16"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </ChevronDown>
        </div>
      </Arrow>
    </div>
    <ul
      className="dropdown-selector-content css-e99cqv"
    >
      <OptionGroup
        focusedIndex={-1}
        getStyle={[Function]}
        key="numbers"
        onOptionClicked={[Function]}
        optionGroup={
          Object {
            "groupOptions": Array [
              Object {
                "value": "1",
              },
              Object {
                "value": "2",
              },
              Object {
                "value": "3",
              },
              Object {
                "value": "4",
              },
              Object {
                "value": "5",
              },
              Object {
                "value": "6",
              },
              Object {
                "value": "7",
              },
              Object {
                "value": "8",
              },
              Object {
                "value": "9",
              },
              Object {
                "value": "10",
              },
            ],
            "label": "numbers",
          }
        }
        startingIndex={0}
      >
        <div
          className="css-dckqxd"
        >
          <div
            className="css-1q3omhu"
          >
            <div>
              NUMBERS
               |  
            </div>
            <div>
              10
            </div>
          </div>
          <OptionItem
            key="1"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "1",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              1
            </div>
          </OptionItem>
          <OptionItem
            key="2"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "2",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              2
            </div>
          </OptionItem>
          <OptionItem
            key="3"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "3",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              3
            </div>
          </OptionItem>
          <OptionItem
            key="4"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "4",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              4
            </div>
          </OptionItem>
          <OptionItem
            key="5"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "5",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              5
            </div>
          </OptionItem>
          <OptionItem
            key="6"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "6",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              6
            </div>
          </OptionItem>
          <OptionItem
            key="7"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "7",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              7
            </div>
          </OptionItem>
          <OptionItem
            key="8"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "8",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              8
            </div>
          </OptionItem>
          <OptionItem
            key="9"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "9",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              9
            </div>
          </OptionItem>
          <OptionItem
            key="10"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "10",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              10
            </div>
          </OptionItem>
          <div
            className="css-iryzig"
          />
        </div>
      </OptionGroup>
      <OptionGroup
        focusedIndex={-1}
        getStyle={[Function]}
        key="letters"
        onOptionClicked={[Function]}
        optionGroup={
          Object {
            "groupOptions": Array [
              Object {
                "value": "a",
              },
              Object {
                "value": "b",
              },
              Object {
                "value": "c",
              },
              Object {
                "value": "d",
              },
              Object {
                "value": "e",
              },
              Object {
                "value": "f",
              },
              Object {
                "value": "g",
              },
              Object {
                "value": "h",
              },
              Object {
                "value": "i",
              },
              Object {
                "value": "j",
              },
            ],
            "label": "letters",
          }
        }
        startingIndex={10}
      >
        <div
          className="css-dckqxd"
        >
          <div
            className="css-1q3omhu"
          >
            <div>
              LETTERS
               |  
            </div>
            <div>
              10
            </div>
          </div>
          <OptionItem
            key="a"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "a",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              a
            </div>
          </OptionItem>
          <OptionItem
            key="b"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "b",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              b
            </div>
          </OptionItem>
          <OptionItem
            key="c"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "c",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              c
            </div>
          </OptionItem>
          <OptionItem
            key="d"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "d",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              d
            </div>
          </OptionItem>
          <OptionItem
            key="e"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "e",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              e
            </div>
          </OptionItem>
          <OptionItem
            key="f"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "f",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              f
            </div>
          </OptionItem>
          <OptionItem
            key="g"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "g",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              g
            </div>
          </OptionItem>
          <OptionItem
            key="h"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "h",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              h
            </div>
          </OptionItem>
          <OptionItem
            key="i"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "i",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              i
            </div>
          </OptionItem>
          <OptionItem
            key="j"
            onOptionClicked={[Function]}
            option={
              Object {
                "value": "j",
              }
            }
            optionClass="css-qte9rq"
          >
            <div
              className="dropdown-option css-qte9rq"
              onClick={[Function]}
              tabIndex={-1}
            >
              j
            </div>
          </OptionItem>
          <div
            className="css-iryzig"
          />
        </div>
      </OptionGroup>
    </ul>
  </div>
</Dropdown>
`;
